# schat

./: .gitignore  README.md  README_CN.md  pyproject.toml  setup.py
examples/: anthropic_examples.py  basic_usage.py  google_examples.py  key_env.py  model_usage.py  openai_examples.py  openrouter_examples.py  tool_example.py
schat/: __init__.py  config.py
schat/core/: __init__.py  key_manager.py  message.py  session.py  tool.py
schat/models/: __init__.py  anthropic.py  anthropic_helper.py  base.py  factory.py  google.py  openai.py  openrouter.py  provider.py
tests/: conftest.py  test_key_manager.py  test_message.py  test_session.py  test_tool.py
tests/test_models/: __init__.py  test_factory.py  test_model.py  test_openai.py
